--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="http://favicon-generator.org//favicon.ico" mce_href="http://favicon-generator.org//favicon.ico"/>
 <meta name="keywords" content="Garden Template, Free Layout, CSS, HTML, green, light blue, white" />
 <meta name="description" content="Garden Template is a free CSS layout provided by TemplateMo.com" />
-<link href="file:///D|/Semester 4/Pemrograman Berbasis Web/templatemo_169_garden/css.css" rel="stylesheet" type="text/css" />
+<link href="css.css" rel="stylesheet" type="text/css" />
 <script language="javascript" type="text/javascript">
 function clearText(field)
 {
@@ -21,7 +21,7 @@ function clearText(field)
     	
         <div id="site_title">
             <h1><a href="http://www.github.com/webpage/rousan22" target="_parent">
-            <img src="file:///D|/Semester 4/Pemrograman Berbasis Web/templatemo_169_garden/images/cv2.gif" alt="image"/>
+            <img src="images/cv2.gif" alt="image"/>
             <!-- <span>your tagline goes here</span> -->
             </a></h1>
         </div>
@@ -47,11 +47,11 @@ function clearText(field)
     	<div id="sidebar">        
        	  <div class="sidebar_section">
             <h2>It's in Me !</h2>
-               <img src="file:///D|/Semester 4/Pemrograman Berbasis Web/templatemo_169_garden/images/aku.gif" alt="image"/>
+               <img src="images/aku.gif" alt="image"/>
           </div>  
             
             <div class="sidebar_section">
-            	<img src="file:///D|/Semester 4/Pemrograman Berbasis Web/templatemo_169_garden/images/as.gif" alt="image"/>
+            	<img src="images/as.gif" alt="image"/>
  			</div>       
         	<div class="cleaner"></div>
         </div>
