--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ function clearText(field)
 	<div id="templatemo_footer">
     	
         Copyright © 2013 <a href="#">Shadisk Creative Web Developer</a> | 
-        Designed by <a href="http://www.templatemo.com" target="_parent">AM Rousan Shafir</a>
+        Designed by <a href="https://www.facebook.com/rezha.cool" target="_parent">AM Rousan Shafir</a>
     </div>
 
 </div> 
